<resources>
    <string name="app_name">Kolokvij</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_galery">Galery</string>


    <string name="start_galery">Start galery</string>
    <string name="find_author">Find author</string>
    <string name="title_activity_receive_author">ReceiveAuthor</string>

    <string name="google_serach_author">Google author</string>

    <string name="return_to_gallery">Return to gallery</string>
    <string name="change_background">Change Background</string>

    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="white">White</string>

</resources>
