<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hr.math.android.kolokvij.ReceiveAuthor">


    <item android:id="@+id/return_to_gallery"
        android:icon="@drawable/pic1"
        android:title="@string/return_to_gallery" />

    <item android:id="@+id/change_background"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/change_background">

        <menu>
            <item android:id="@+id/blue"
                android:title="@string/blue" />
            <item android:id="@+id/red"
                android:title="@string/red" />
            <item android:id="@+id/black"
                android:title="@string/black" />
            <item android:id="@+id/white"
                android:title="@string/white" />
        </menu>

    </item>





</menu>
